--- a/src/index.css
+++ b/src/index.css
@@ -7,5 +7,5 @@
 body {
   min-height: 100vh;
   width: 100vw;
-  background: linear-gradient(180deg, #FFFFFF);
+  background: linear-gradient(180deg, #FFFFFF 0%, #d8d8d8 100%);
 }
