--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,67 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+h1 {
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    color: #212529;
 }
 
-body {
-  min-height: 100vh;
-  width: 100vw;
-  background: linear-gradient(180deg, #FFFFFF 0%, #d8d8d8 100%);
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 30px;
+    border-radius: 10px;
+    background-color: #f8f9fa;
+    max-width: 50%;
+    width: 400px;
+    margin-bottom: 20px;
+  
+    & button {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+      margin-top: 20px;
+  
+      font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+      font-weight: 500;
+      font-size: 14px;
+  
+      border: none;
+      border-radius: 8px;
+      padding: 10px 16px;
+  
+      cursor: pointer;
+      text-decoration: none;
+      transition: background-color 0.2s ease, box-shadow 0.2s ease;
+  
+      color: #f8f9fa;
+      background-color: #173676;
+    }
+  
+    & button:hover {
+      opacity: 0.8;
+    }
+  
+    & input {
+      width: 100%;
+      height: 34px;
+      padding: 10px 16px 10px 40px;
+  
+      font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+      font-size: 16px;
+  
+      border: 2px solid #dee2e6;
+      border-radius: 8px;
+      background-color: #ffffff;
+    }
+  
+    & input:focus {
+      outline: none;
+      border-color: #173676;
+    }
 }
