--- a/src/pages/HomeCarros/style.module.css
+++ b/src/pages/HomeCarros/style.module.css
@@ -292,7 +292,7 @@ body {
 }
 .modal-header h2 { font-size: 20px; font-weight: 700; }
 .modal-subtitle { font-size: 14px; color: var(--cor-texto-secundario); margin-bottom: 24px; }
-.modal-form { display: flex; flex-direction: column; gap: 16px; }
+.modal-form { display: flex; flex-direction: column; gap: 16px;  max-width: 700px; max-height: 90vh; width: 100%; height: 100%;} 
 .form-row { display: flex; gap: 16px; }
 .form-group { flex: 1; display: flex; flex-direction: column; }
 .form-group-full { flex-basis: 100%; }
